# notal

./: Cargo.toml  README.md  index.html  package-lock.json  package.json
locales/en-GB/: en-GB.ftl
locales/tr-TR/: tr-TR.ftl
src/: App.tsx  greeter_ui.rs  inputs.rs  main.rs  markdown.rs  menu.rs  shader.wgsl  style.css  text_buffer.rs  ui.rs  windows.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs  markdown.rs
src/components/: DictionaryTab.tsx  Editor.tsx  MainMenu.tsx  Preview.tsx  Tab.tsx
