[package]
name = "notal"
version = "0.1.0"
edition = "2021"
authors = ["Oğuz Batur Sarıöz <sariozbatur@gmail.com>"]
description = "Markdown Text Editor Built in Rust."
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cfg-if = "1"
log = "0.4"
pulldown-cmark = "0.7.0"

[dependencies.druid]
git = "https://github.com/linebender/druid.git"
features = ["image-all", "default", "im"]


